# plane-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
docs/open-engine/: AUTONOMY.md  break-to-engine.md  to-engine.md
docs/open-engine/janitors/: README.md  constants.example.sh  false-done-backstop-reconciler.sh  heartbeat-watchdog.sh  human-queue-digest.sh  lifecycle-notifier.sh  orphan-pr-review-reconciler.sh  pr-age-escalator.sh  pr-base-drift-reconciler.sh  pr-merge-reconciler.sh  superseded-oe-surfacer.sh
docs/open-engine/janitors/lib/: reconcile.sh
examples/open_engine/: README.md  oe.py
plane_client/: __init__.py  cli.py  core.py  mcp_server.py
tests/: test_core.py
