[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plane-client"
version = "0.1.0"
description = "A dependency-free Python client, CLI, and MCP server for the Plane API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Matt Goodrich" }]
keywords = ["plane", "project-management", "cli", "mcp", "api-client"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
plane = "plane_client.cli:main"

[project.urls]
Homepage = "https://github.com/mgoodric/plane-client"
Repository = "https://github.com/mgoodric/plane-client"

[tool.setuptools]
packages = ["plane_client"]
